@@ -28,14 +28,14 @@ EBUILD hsqldb-1.8.0.4.ebuild 5005 RMD160 16db5d862558263a6c008a7321feffaaba3e2bd
 MD5 bbc4b3c7e9b72b2ca824b8ead734af77 hsqldb-1.8.0.4.ebuild 5005
 RMD160 16db5d862558263a6c008a7321feffaaba3e2bd3 hsqldb-1.8.0.4.ebuild 5005
 SHA256 272ce2c14222ed56416a9dde1b46230e43d09cc33ec363919a242e3d444e079f hsqldb-1.8.0.4.ebuild 5005
-EBUILD hsqldb-1.8.0.7.ebuild 5045 RMD160 abd2dd422303e79818d4375064e93f96c68d2a86 SHA1 d225d679bdbce13080af5b848ba977f1385d54c0 SHA256 c53f5f3dea6f28867a1e73b315168032cb12028303382b3a17b57eb0b14e7752
-MD5 9442f43df8664f6fcefd70b8e6fbd6a9 hsqldb-1.8.0.7.ebuild 5045
-RMD160 abd2dd422303e79818d4375064e93f96c68d2a86 hsqldb-1.8.0.7.ebuild 5045
-SHA256 c53f5f3dea6f28867a1e73b315168032cb12028303382b3a17b57eb0b14e7752 hsqldb-1.8.0.7.ebuild 5045
-MISC ChangeLog 4201 RMD160 be6d339359ce46e4faab9a28047066a03c79f323 SHA1 b8dfc263f36875885cf6036c833d3c7365360878 SHA256 5b7670dda0abe0d2ced081d41c6c4377ac2e49d6d5760fc9c621e1bb916e9b1f
-MD5 5fce0d5c6b1fe2bcbb0d8976883af06c ChangeLog 4201
-RMD160 be6d339359ce46e4faab9a28047066a03c79f323 ChangeLog 4201
-SHA256 5b7670dda0abe0d2ced081d41c6c4377ac2e49d6d5760fc9c621e1bb916e9b1f ChangeLog 4201
+EBUILD hsqldb-1.8.0.7.ebuild 4972 RMD160 d753fb474696f4ef8c16947022c3d879f5b60fa3 SHA1 90ee2f1f618452177b633adf1f987fae84fa9d61 SHA256 bf3f404ad506903897cb5ea405d486f2c79366c99937ab59b18f044b66a630e5
+MD5 736f5726ee29b71cdff431c88fbc4246 hsqldb-1.8.0.7.ebuild 4972
+RMD160 d753fb474696f4ef8c16947022c3d879f5b60fa3 hsqldb-1.8.0.7.ebuild 4972
+SHA256 bf3f404ad506903897cb5ea405d486f2c79366c99937ab59b18f044b66a630e5 hsqldb-1.8.0.7.ebuild 4972
+MISC ChangeLog 4365 RMD160 7e07cbc5f9fa4dfa214fb1cd06f635b85b5835fa SHA1 3e3ccad05902eaf485a0cde4a19f209364a0e820 SHA256 e29ee93292d95203f385a86e9f2b0e0734eb3a35782ac260934989af041bb21e
+MD5 f79362444a039e96250ab3dd87c76471 ChangeLog 4365
+RMD160 7e07cbc5f9fa4dfa214fb1cd06f635b85b5835fa ChangeLog 4365
+SHA256 e29ee93292d95203f385a86e9f2b0e0734eb3a35782ac260934989af041bb21e ChangeLog 4365
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 MD5 123cf9440c1d4ac78f2caba1624765f9 metadata.xml 158
 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 metadata.xml 158
